<resources>
    <string name="app_name">Tez-Sat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_seen_in">First seen in:</string>
    <string name="last_known_location">Last known location:</string>
    <string name="episode_code">Episode code:</string>
    <string name="enter_name">enter name</string>
    <string name="search">Search</string>
    <string name="set_status">set status</string>
    <string name="set_gender">set gender</string>
    <string name="show">Show</string>
    <string name="created">Created</string>
</resources>