<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.character.detail.DetailCharacterFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1B1919">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_avatar"
                android:layout_width="180dp"
                android:layout_height="208dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rounded_iv"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14sp"
                android:layout_marginTop="8sp"
                android:layout_toEndOf="@+id/iv_avatar"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Cool Rick" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_alive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_marginStart="14sp"
                android:layout_toEndOf="@+id/iv_avatar"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Alive - " />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_human"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_marginStart="4sp"
                android:layout_toEndOf="@+id/tv_alive"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Human " />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_last_known"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_alive"
                android:layout_centerVertical="true"
                android:layout_marginStart="14sp"
                android:layout_marginTop="8sp"
                android:layout_toEndOf="@+id/iv_avatar"
                android:fontFamily="sans-serif-medium"
                android:text="@string/last_known_location"
                android:textColor="#424242"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_last_known"
                android:layout_centerVertical="true"
                android:layout_marginStart="14sp"
                android:layout_toEndOf="@+id/iv_avatar"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Earth(Replacement Dimension" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_last_seen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_location"
                android:layout_centerVertical="true"
                android:layout_marginStart="14sp"
                android:layout_marginTop="8sp"
                android:layout_toEndOf="@+id/iv_avatar"
                android:fontFamily="sans-serif-medium"
                android:text="@string/first_seen_in"
                android:textColor="#424242"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_first_seen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_last_seen"
                android:layout_centerVertical="true"
                android:layout_marginStart="14sp"
                android:layout_toEndOf="@+id/iv_avatar"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Edge of Tomorty:Rick,Die,Rickpeat" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_created_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_first_seen"
                android:layout_centerVertical="true"
                android:layout_marginStart="14sp"
                android:layout_marginTop="8sp"
                android:layout_toEndOf="@+id/iv_avatar"
                android:fontFamily="sans-serif-medium"
                android:text="@string/created"
                android:textColor="#424242"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_created_date"
                android:layout_centerVertical="true"
                android:layout_marginStart="14sp"
                android:layout_toEndOf="@+id/iv_avatar"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Edge of Tomorty:Rick,Die,Rickpeat" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>